Fix todo title overflow-x; change edit todo description to textarea

--- a/src/style.scss
+++ b/src/style.scss
@@ -394,8 +394,8 @@ header {
     margin: 0;
     align-items: stretch;
     white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    overflow-x: scroll;
+    overflow-y: hidden;
     color: $neutral-1;
     font-weight: 400;
   }
